src/main/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swim-dnotam-provider-validator
  labels:
    app: swim-dnotam-provider-validator
    app.kubernetes.io/name: swim-dnotam-provider-validator
    app.kubernetes.io/component: dnotam-provider-validator
    app.kubernetes.io/part-of: swim-dnotam
spec:
  selector:
    app: swim-dnotam-provider-validator
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
